# OmniTrade

./: .gitignore  CLAUDE.md  EXCHANGE_INTEGRATION_GUIDE.md  README.md  VOLUME_FARMING_GUIDE.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  skills-lock.json
.claude/skills/: sun-yuchen-perspective
benchmark_data/: README.md
benchmark_data/2026-05-31/: summary.json
config/: exchanges.yaml  risk.yaml  secrets.example.yaml  secrets.yaml  volume_farming.yaml
docs/: AGENT_INTEGRATION.md  FUNDING_ARB_THEORY.md  OPTIMIZATION_ROADMAP.md  PRD.md  REFACTOR_PLAN.md  STATUS.md  index.md
docs/api-reference/: cli.md  coordinator.md  core.md  exchanges.md  funding-arb.md  index.md  market.md  observability.md  persistence.md
docs/design-docs/: exchange-integration-guide.md  index.md
docs/developer-guide/: architecture.md  coordination-pipeline.md  exchange-layer.md  index.md  invariants.md  legacy-mode.md  market-layer.md  persistence-layer.md  state-machine.md  testing.md
docs/subagent/: 0_CONTRACT.md  A_MARKET.md  B_PERSISTENCE.md  C_COORDINATOR.md  D_CLI.md  E_MERGE.md
docs/user-guide/: cli-reference.md  configuration.md  index.md  quickstart.md  risk-controls.md
scripts/: analyze_benchmark.py  benchmark.py
src/: logging_setup.py  main.py
src/cli/: agent_api.py  bootstrap.py  main.py
src/coordinator/: __init__.py  account_type.py  executor.py  intent.py  orchestrator.py  plan.py  planner.py  reconciler.py  risk.py  state_machine.py  timing.py  validator.py
src/core/: arbitrage_engine.py  base_exchange.py  exchange_factory.py  volume_engine.py
src/exchanges/: ccxt_exchange.py  hl_example.py  lighter.py  lighter_exchange.py
src/market/: __init__.py  asset.py  funding_rate_cache.py  instrument.py  mock_backend.py  orderbook_cache.py  pair_matcher.py  quote.py  quote_fetcher.py  registry.py
src/observability/: __init__.py  metrics.py
src/persistence/: __init__.py  schema.py  store.py
src/strategies/: hedge_volume.py  spread_arbitrage.py
src/strategy/: __init__.py
src/utils/: data_processor.py  log_utils.py  logger.py  network_manager.py
tests/: conftest.py
tests/cli/: conftest.py  test_agent_api.py  test_commands.py  (+5 more)
tools/: chaos_test.py
(+206 files in other folders)
