[project]
name = "omnitrade"
version = "0.1.0"
description = "Async Python trading bot for Perp DEX volume farming and arbitrage monitoring"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.5.0",
    "pyyaml>=6.0.1",
    "aiohttp>=3.10.11",
    "websockets>=12.0",
    "typer>=0.15",
    "rich>=13.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-aiohttp",
]

[project.scripts]
onefill = "src.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [".venv", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--durations=10",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "websocket: marks tests as websocket tests",
    "rest: marks tests as rest api tests",
    "unit: marks tests as unit tests",
    "network: tests that require network access",
    "mock: tests that use heavy mocking",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.28",
]
dev = [
    "matplotlib>=3.10.9",
]
